# ffmpeg-win32

./: CMakeLists.txt  CMakeLists.txt.bak  export.def  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-windows-dll.yml  build-windows-dll.yml.bak
include/libavcodec/: ac3_parser.h  adts_parser.h  avcodec.h  avdct.h  bsf.h  codec.h  codec_desc.h  codec_id.h  codec_par.h  d3d11va.h  defs.h  exif.h  packet.h  smpte_436m.h
include/libavdevice/: avdevice.h
include/libavfilter/: avfilter.h  buffersink.h  buffersrc.h  version.h  version_major.h
include/libavformat/: avformat.h  avio.h  version.h  version_major.h
include/libavutil/: ffversion.h
include/libswresample/: swresample.h
include/libswscale/: swscale.h
src/: avstream_analyzer.cpp  avstream_analyzer.h  main.c  main.cpp  main.cpp.bak  struct_info_extractor.c
